whatsapp alignment and footer content correction

--- a/css/style.css
+++ b/css/style.css
@@ -1394,14 +1394,16 @@ margin-bottom: 30px;
     padding-top: 90px;
 }
 .call_now2 h3 {
-font-size: 30px;
+font-size: 25px;
 line-height: 40px;
 color: #fff;
 padding-bottom: 33px;
+font-family: 'bodoniflfmedium_italic';
+font-style: italic;
     
 }
 .call_now2 span {
-    font-size: 31px;
+    font-size: 20px;
     line-height: 30px;
     font-weight: bold;
     color: #000;
@@ -1510,7 +1512,7 @@ background-position: center;
      text-align: center;
      font-size: 30px;
      box-shadow: 3px 4px 3px #999;
-     left: 15px;
+     right: 20px;
      z-index: 100;
  }
  
